hphp/hack/test/typecheck/functional_dots.php.exp
File "functional_dots.php", line 18, characters 5-12:
Invalid argument (Typing[4039])
File "functional_dots.php", line 12, characters 12-39:
Number of arguments doesn't match
File "functional_dots.php", line 18, characters 5-12:
Because of this definition
